[package]
name = "git-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.19.0"
sha1 = "0.10.6"
git2 = "0.13.25"
tempdir = "0.3.7"
clap = {version = "4.3.21", features = ["derive"]}
colored = "2.0.4"

[dev-dependencies]
rstest = "0.18.2"